mongodb-k8s/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
