mongodb-k8s/networkpolicy-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-mongodb-catalogo
spec:
 podSelector:
  matchLabels:
   app: mongodb
 policyTypes:
  - Ingress 
  - Egress 

 ingress:
   - from: 
     - podSelector:
         matchLabels:
          app: api 
     ports:
      - protocol: TCP
        port: 27017
 egress:
  - to: 
     - podSelector:
        matchLabels:
          app: api 
    ports:
     - protocol: TCP
       port: 27017
